--- a/estilos.css
+++ b/estilos.css
@@ -1,114 +1,38 @@
 .body {font-size: 20px;
-       font-family: 'Roboto', sans-serif;
-       text-align: justify; background-color: rgb(214, 210, 210);
-       line-height: 1.5; margin: 0px;}
+    font-family: 'Roboto', sans-serif;
+    text-align: justify; background-color: rgb(214, 210, 210);
+    line-height: 1.5; margin: 0px;}
+ 
 
-    
-    
+ h1 {color:#fc8506; padding-top: 80px; padding-right: 30px; text-align: right;
+     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+     font-size: 350%;
+     }
+ h2 {color:#fc8506; text-align: center; background-color: black;}
 
-    
-    h1 {color:#fc8506; text-align: end; padding-right: 150px;margin-top: 80px;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;font-size: 80px;}
-    
-    h2 {color:#fc8506;text-align: center;background-color: black;}
-    
-    h3 {color:#fc8506; background-color: black; padding-left: 10px;}
+ h3 {color:#fc8506; background-color: black; padding-left: 10px;}
+ 
+ h5 {text-align: center; color: #fc8506; background-color: black;
+     padding-left: 10px; padding-right: 10px; padding-top: 5px; padding-bottom: 5px;
+     border-style: solid;}  
 
-    h5 {color: #fc8506; background-color: black;display: inline-block;
-        border-style: solid; border-color: #fc8506; padding: 10px; margin: 20px 10px 20px 10px;}
-        
-    h6 {text-align: center; color: #fc8506;background-color: black;
-        margin: 0%; padding: 10px; font-size: 14px;}    
-    
-    a{text-decoration: none; color: #fc8506;}
+ h6{text-align: center; background-color: black; color: #fc8506;}      
+ 
+ a{text-decoration: none; color:#fc8506;}
+ 
+ li{color: #fc8506; list-style: none;}
+ 
+.img{width: 300px; height: 200px;}
 
-    a:hover{background-color:gray; padding-left: 10px; padding-right: 10px;}
-    
-    li{text-decoration: none; color: #fc8506;}
+.header{background-image: url(./Imagenes/Header.png); background-size: cover;}
 
-    li:hover {background-color:gray; padding-left: 10px; padding-right: 10px;}     
+.nav{background-color: black; margin-top: 100px;}
 
-/*HEADER*/    
+.section {padding-left: 40px; padding-right: 40px; padding-top: 10px; padding-bottom: 10px}
 
-           
-.header{background-image: url(./Imagenes/Header.png);background-repeat: no-repeat; 
-    background-size: cover; padding-top: 10px; margin: 0%;
-     display: flex; flex-direction: column;}
-    /* .titulo{text-align: right; padding-right: 200px;}  */
-    .nav{width: 100%; background-color: black; margin-top: 50px; padding-top: 5px;padding-bottom: 5px; padding-left: 0%; padding-right: 0%;}
-    .nav ul{display: flex; flex-direction: row;justify-content: space-around;
-        list-style-type: none; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        margin: 0%; }      
-  
-/* SECCIONES */ 
+.flexBoton{display: flex; justify-content: center; align-items: center; padding-top: 20px;}
 
-    .section {padding: 10px 40px 10px 40px;}
-
-    /*FOTOS INDEX CORRIENTES DIRECTORES*/    
-
-    .gridFotos {display: grid; grid-template-columns: repeat(4, 2fr);
-                grid-template-rows: auto;         
-                grid-column-gap: 10px;}
-    .gridFotosImage {width: 100%; height: 100%;}
-    
-    .flexBoton{display: flex; justify-content: center; align-items: center; padding-top: 20px;}
-
-
-    /*CORRIENTES Y DIRECTORES*/
-
-    
-    /* GALERÍA DE FOTOS */
-
-         .gridGalería {display: grid;
-                      grid-template-columns: repeat(5, 2fr);
-                      grid-template-rows: repeat(3, 4fr);
-                      grid-column-gap: 10px; grid-row-gap: 10px;}
-         .imgGalería {width: 100%; height: 100%;}
-         .imgGalería:hover{transform: scale(1.3); transition: transform 1s;}             
-      
-    /*CONTACTO*/
-    .flexContacto{width: 100%; height: 50vh;
-                  display: flex; flex-direction: row;
-            align-items: center;}
-    .flexItem {width: 50%; height: 50vh; align-items: flex-start;}
-    .contacto{width: 30%;}
-    .formulario{width: 70%;}
-                   
-
-/* FOOTER */
-
-    .footer {display: flex; flex-flow: row nowrap; justify-content: center;
-             justify-content: space-around; background-color: black;
-             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-             list-style-type: none;margin: 0%; padding-top: 20px; padding-bottom: 20px;}
-
-             
-
-@media  only screen and (min-width:0px) and (max-width: 767px) {
-
-    /*HEADER*/
-
-    .header{background-image: none; background-color: black;    
-         display: flex; flex-direction: column;}
-        .nav ul{display: flex; flex-direction: column;align-items: center;}
-        
-    
-    /*INDEX - CORRIENTES - DIRECTORES*/
-
-    .gridFotos {display: grid; grid-template-columns: repeat(2, 2fr);
-                grid-template-rows: repeat(2, 2fr);
-                grid-column-gap: 10px;grid-row-gap: 10px;}
-    
-    /*GALERÍA*/
-
-    .gridGalería {display: grid;
-        grid-template-columns: repeat(2, 2fr);
-        grid-template-rows: repeat(3, 4fr);
-        grid-column-gap: 10px; grid-row-gap: 10px;}
-    .imgGalería {width: 100%; height: 100%;}  
-
-    /*FOOTER*/      
-
-    .footer {display: flex; flex-direction: column; align-items: center;}     
-}
-
+.footer {display: flex; flex-flow: row nowrap; justify-content: center;
+    justify-content: space-around; background-color: black;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    list-style-type: none;margin: 0%; padding-top: 20px; padding-bottom: 20px;}
