--- a/estilos.css
+++ b/estilos.css
@@ -8,15 +8,16 @@
      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
      font-size: 350%;
      }
- h2 {color:#fc8506; text-align: center; background-color: black;}
+ h2 {color:#fc8506; text-align: center; background-color: black;
+     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
 
- h3 {color:#fc8506; background-color: black; padding-left: 10px;}
+ h3 {color:#fc8506; background-color: black; padding-left: 10px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
  
  h5 {text-align: center; color: #fc8506; background-color: black;
      padding-left: 10px; padding-right: 10px; padding-top: 5px; padding-bottom: 5px;
-     border-style: solid;}  
+     border-style: solid; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}  
 
- h6{text-align: center; background-color: black; color: #fc8506;}      
+ h6{text-align: center; background-color: black; color: #fc8506; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}      
  
  a{text-decoration: none; color:#fc8506;}
  
@@ -30,9 +31,34 @@
 
 .section {padding-left: 40px; padding-right: 40px; padding-top: 10px; padding-bottom: 10px}
 
+
 .flexBoton{display: flex; justify-content: center; align-items: center; padding-top: 20px;}
 
 .footer {display: flex; flex-flow: row nowrap; justify-content: center;
     justify-content: space-around; background-color: black;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     list-style-type: none;margin: 0%; padding-top: 20px; padding-bottom: 20px;}
+
+    @media  only screen and (min-width:0px) and (max-width: 767px) {
+
+        /*HEADER*/
+    
+        .header{background-image: none; background-color: black;    
+             display: flex; flex-direction: column;}
+            .nav ul{display: flex; flex-direction: column;align-items: center;}
+            
+        
+        /*INDEX - CORRIENTES - DIRECTORES*/
+    
+        
+        /*GALERÍA*/
+    
+        .imgGalería {width: 100%; height: 100%;}  
+
+        .imgContacto{width: 300px;height: 300px;}
+    
+        /*FOOTER*/      
+    
+        .footer {display: flex; flex-direction: column; align-items: center;}     
+    }
+    
