--- a/estilos.css
+++ b/estilos.css
@@ -6,7 +6,7 @@
 
  h1 {color:#fc8506; padding-top: 80px; padding-right: 30px; text-align: right;
      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-     font-size: 350%;
+     font-size: 5rem;
      }
  h2 {color:#fc8506; text-align: center; background-color: black;
      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
@@ -55,8 +55,7 @@
     
         .imgGalería {width: 100%; height: 100%;}  
 
-        .imgContacto{width: 300px;height: 300px;}
-    
+           
         /*FOOTER*/      
     
         .footer {display: flex; flex-direction: column; align-items: center;}     
