--- a/estilos.css
+++ b/estilos.css
@@ -6,7 +6,7 @@
 
  h1 {color:#fc8506; padding-top: 80px; padding-right: 30px; text-align: right;
      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-     font-size: 5rem;
+     font-size: 4rem;
      }
  h2 {color:#fc8506; text-align: center; background-color: black;
      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
@@ -22,8 +22,9 @@
  a{text-decoration: none; color:#fc8506;}
  
  li{color: #fc8506; list-style: none;}
+ li:hover {background-color:gray; padding-left: 10px; padding-right: 10px;}     
  
-.img{width: 300px; height: 200px;}
+/* .img{width: 300px; height: 200px;} */
 
 .header{background-image: url(./Imagenes/Header.png); background-size: cover;}
 
@@ -31,14 +32,31 @@
 
 .section {padding-left: 40px; padding-right: 40px; padding-top: 10px; padding-bottom: 10px}
 
-
 .flexBoton{display: flex; justify-content: center; align-items: center; padding-top: 20px;}
+
+/*FOTOS INDEX CORRIENTES DIRECTORES*/    
+
+.gridFotos {display: grid; grid-template-columns: repeat(4, 2fr);
+    grid-template-rows: auto;         
+    grid-column-gap: 10px;}
+.gridFotosImage {width: 100%; height: 100%;}
+
+/* GALERÍA DE FOTOS */
+
+.gridGalería {display: grid;
+    grid-template-columns: repeat(4, 2fr);
+    grid-template-rows: repeat(3, 4fr);
+    grid-column-gap: 10px; grid-row-gap: 10px;}
+.imgGalería {width: 100%; height: 100%;}             
+
+/*FOOTER*/
 
 .footer {display: flex; flex-flow: row nowrap; justify-content: center;
     justify-content: space-around; background-color: black;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     list-style-type: none;margin: 0%; padding-top: 20px; padding-bottom: 20px;}
 
+    
     @media  only screen and (min-width:0px) and (max-width: 767px) {
 
         /*HEADER*/
@@ -50,14 +68,19 @@
         
         /*INDEX - CORRIENTES - DIRECTORES*/
     
+        .gridFotos {display: grid; grid-template-columns: repeat(2, 2fr);
+                    grid-template-rows: repeat(2, 2fr);
+                    grid-column-gap: 10px;grid-row-gap: 10px;}
         
         /*GALERÍA*/
     
+        .gridGalería {display: grid;
+            grid-template-columns: repeat(2, 2fr);
+            grid-template-rows: repeat(3, 4fr);
+            grid-column-gap: 10px; grid-row-gap: 10px;}
         .imgGalería {width: 100%; height: 100%;}  
-
-           
+    
         /*FOOTER*/      
     
         .footer {display: flex; flex-direction: column; align-items: center;}     
-    }
-    
+        }
