--- a/estilos.css
+++ b/estilos.css
@@ -4,11 +4,11 @@
     line-height: 1.5; margin: 0px;}
  
 
- h1 {color:#fc8506; padding-top: 80px; padding-right: 30px; text-align: right;
+ h1 {color:#fc8506; padding-top: 100px; padding-right: 50px; text-align: right;
      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
      font-size: 4rem;
      }
- h2 {color:#fc8506; text-align: center; background-color: black;
+ h2 {color:#fc8506; text-align: center; background-color:black;
      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
 
  h3 {color:#fc8506; background-color: black; padding-left: 10px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
@@ -17,19 +17,21 @@
      padding-left: 10px; padding-right: 10px; padding-top: 5px; padding-bottom: 5px;
      border-style: solid; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}  
 
+ h5:hover{background-color: gray ;}    
+ 
  h6{text-align: center; background-color: black; color: #fc8506; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}      
  
  a{text-decoration: none; color:#fc8506;}
  
- li{color: #fc8506; list-style: none;}
+ li{color: #fc8506;}
  li:hover {background-color:gray; padding-left: 10px; padding-right: 10px;}     
  
 /* .img{width: 300px; height: 200px;} */
 
-.header{background-image: url(./Imagenes/Header.png); background-size: cover;}
-
-.nav{background-color: black; margin-top: 100px;}
-
+.header{background-image: url(./Imagenes/Header.png); background-size: cover;
+        padding-bottom: 100px;}
+.navbar-brand:hover{background-color: gray;}
+.nav-link{ font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}           
 .section {padding-left: 40px; padding-right: 40px; padding-top: 10px; padding-bottom: 10px}
 
 .flexBoton{display: flex; justify-content: center; align-items: center; padding-top: 20px;}
@@ -47,7 +49,11 @@
     grid-template-columns: repeat(4, 2fr);
     grid-template-rows: repeat(3, 4fr);
     grid-column-gap: 10px; grid-row-gap: 10px;}
-.imgGalería {width: 100%; height: 100%;}             
+.imgGalería {width: 100%; height: 100%;}
+.imgGalería:hover{transform: scale(1.3); transition: transform 1s;}           
+
+/*CONTACTO*/
+.form-label{color: #fc8506; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
 
 /*FOOTER*/
 
@@ -64,6 +70,8 @@
         .header{background-image: none; background-color: black;    
              display: flex; flex-direction: column;}
             .nav ul{display: flex; flex-direction: column;align-items: center;}
+         
+            
             
         
         /*INDEX - CORRIENTES - DIRECTORES*/
